# SAIMCC

./: .gitmodules  CMakeLists.txt  README.md
SCPTP/: CollisionPhysics.py  Constants.py  Loop.py  Newton.py  Tallies.py  main.py
src/: SCPT.hpp
src/SCPT/SCol/: CMakeLists.txt  Scol.cpp
src/SCPT/Simple_Collision/: CMakeLists.txt  Simple_Collision.cpp  Timer.hpp
src/SCPT/Threaded/: CMakeLists.txt  State.hpp  Threaded.cpp  threaded.cpp
